1.4.0
-----

* Bugfix to allow address types in constructor arguments.

1.3.0
-----

* Partial implementation of the `web3.eth.contract` interface.

1.2.0
-----

* Restructure project modules to be more *flat*
* Add ability to run test suite without the *slow* tests.
* Breakup `encoding` utils into smaller modules.
* Basic pep8 formatting.
* Apply python naming conventions to internal APIs
* Lots of minor bugfixes.
* Removal of dead code left behing from `1.0.0` refactor.
* Removal of `web3/solidity` module.

1.1.0
-----

* Add missing `isConnected()` method.
* Add test coverage for `setProvider()`

1.0.1
-----

* Specify missing `pyrlp` and `gevent` dependencies

1.0.0
-----

* Massive refactor to the majority of the app.

0.1.0
-----

TODO